# torq-compiler

./: CMakeLists.txt  iree_compiler_plugin.cmake
compiler/torq/Pipelines/: CMakeLists.txt
compiler/torq/Transforms/Linalg/: SpecializeTransposeOpPattern.cpp
compiler/torq/Utils/: CMakeLists.txt
compiler/torq_next/: CMakeLists.txt  PluginRegistration.cpp  README.md
compiler/torq_next/Codegen/: CMakeLists.txt  InsertDMAPass.cpp  Passes.h  Passes.td  PassesDetail.h  ResolveWorkgroupCountPass.cpp  TileMatMulPass.cpp  TorqNextLowerExecutableTargetPass.cpp
compiler/torq_next/Conversions/LinalgToTorqNextHL/: CMakeLists.txt  LinalgMatMulToTorqNextHLPass.cpp  Passes.h  Passes.td  PassesDetail.h
compiler/torq_next/Dialect/TorqNextHL/: BufferizationInterfaces.cpp  BufferizationInterfaces.h  CMakeLists.txt  TorqNextHLBase.td  TorqNextHLDialect.cpp  TorqNextHLDialect.h  TorqNextHLOps.cpp  TorqNextHLOps.h  TorqNextHLOps.td
compiler/torq_next/Pipelines/: CMakeLists.txt  Pipelines.cpp  Pipelines.h
tests/torq_next/: matmul_bf16_siglip.linalg.mlir  matmul_bf16_siglip.stablehlo.mlir
